# ndk-opengles

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/wind/ndk/opengles/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: BaseFilter.cpp  BaseFilter.h  CMakeLists.txt  GLLooper.cpp  GLLooper.h  GLRender.cpp  GLRender.h  ScreenFilter.cpp  ScreenFilter.h  Triangle.cpp  Triangle.h  com_wind_ndk_opengl_es_n_PngDecoder.cpp  com_wind_ndk_opengles_n_NativeGLRenderer.cpp  com_wind_ndk_opengles_n_NativeGLRenderer.h  com_wind_ndk_opengles_n_PngDecoder.cpp  global.cpp  global.h  log.h
app/src/main/cpp/common/: jniutil.h
app/src/main/cpp/egl/: BaseEGLSurface.cpp  BaseEGLSurface.h  EGLCore.cpp  EGLCore.h  IGLRender.h  OffscreenSurface.cpp  OffscreenSurface.h  WindowSurface.cpp  WindowSurface.h
app/src/main/cpp/gles/: GlShaders.cpp  GlShaders.h  GlUtils.cpp  GlUtils.h
app/src/main/cpp/libpng/: CMakeLists.txt  png_decoder.cpp  png_decoder.h  png_reader.cpp  png_reader.h  raw.cpp  raw.h
app/src/main/cpp/looper/: Looper.cpp  Looper.h
app/src/main/cpp/pngdecoder/: asset_png_decoder.cpp  asset_png_decoder.h  file_png_decoder.cpp  file_png_decoder.h
app/src/main/java/com/wind/ndk/opengles/: CameraHelper.java
app/src/main/java/com/wind/ndk/opengles/j/: CameraRenderer.java  GLESUtils.java  MainActivity.java  MyGLRenderer.java  MyGLSurfaceView.java  MyRecordButton.java  ShaderHelper.java  TextResourceReader.java  TextResoureReader.java
app/src/main/java/com/wind/ndk/opengles/j/filter/: BaseFboFilter.java  BaseFilter.java  CameraFilter.java  ScreenFilter.java
app/src/main/java/com/wind/ndk/opengles/j/record/: AudioRecorder.java  BaseRecorder.java  EGLCore.java  EGLRenderer.java  Frame.java  (+3 more)
app/src/main/java/com/wind/ndk/opengles/n/: MainActivity.java  NativeGLRenderer.java  PngDecoder.java  SurfaceCallback.java
app/src/main/res/layout/: activity_main.xml  activity_native_main.xml
app/src/main/res/raw/: base_fragment.glsl  base_vertex.glsl  camera_fragment.frag  camera_vertex.vert  screen_fragment.frag  screen_vertex.vert
app/src/main/res/values/: strings.xml
app/src/test/java/com/wind/ndk/opengles/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
(+2 files in other folders)
